[project]
name = "life-finances"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask==3.1.3",
    "numpy==1.26.1",
    "numpy-financial==1.0.0",
    "pandas==2.1.2",
    "pydantic==2.4.2",
    "PyYAML==6.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-cov==7.0.0",
    "pytest-flask==1.3.0",
    "pytest-mock==3.12.0",
    "snakeviz==2.2.0",
    "ruff==0.14.10",
    "pyright==1.1.407",
    "ipykernel==7.1.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

# Start with a strong but reasonable rule set
lint.select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes (unused, undefined)
  "W",    # warnings
  "I",    # import sorting
  "B",    # bugbear (likely bugs)
  "UP",   # pyupgrade
  "C90",  # complexity
]

lint.extend-select = [
    "I", # if you're using Ruff to organize imports in VS Code and also expect to run Ruff from the command line, you'll want to enable Ruff's isort rules by adding "I"
    ]

lint.ignore = [
  "E501",  # line length (formatter handles this)
]

exclude = [
  ".venv",
  "__pycache__",
  ".git",
  "build",
  "dist",
  "*.egg-info",
]   

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py
"tests/*" = ["E501"] # More lenient line length in tests
"standalone_tools/*" = ["E402"] # standalone_tools require out-of-order imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"