[project]
name = "life-finances"
version = "0.1.0"
description = "Personal finances simulator — TPAW monthly modeling"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.14.10",
    "pyright>=1.1.407",
    "pre-commit>=3.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["packages", "scripts", "tests"]
extend-exclude = ["archive"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C90"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
